--- a/public/style.css
+++ b/public/style.css
@@ -54,18 +54,18 @@ width:150px;
 
 #start{
   position:absolute;
-  transform:translate(-120px,740px);    
+  transform:translate(-120px,780px);    
   background: pink;
   }
   
 #latin{
     position:absolute;
-    transform:translate(-120px,770px);    
+    transform:translate(-120px,810px);    
     } 
 
  #ambient{
     position:absolute;
-    transform:translate(-120px,800px);    
+    transform:translate(-120px,840px);    
     } 
     
 #camera1{
@@ -89,7 +89,7 @@ width:150px;
   font-family: 'Helvetica';
   transform: translate(85px,580px);
 }
-#doodle{
+/*#doodle{
   position:relative;
   height: 40px;
   width: 90px;
@@ -111,7 +111,7 @@ width:150px;
   transform: translate(15px,605px);
 }
 
-/*#record{
+#record{
   position:absolute;
   height: 90px;
   width: 90px;
